package device;

public class Light extends Device {
    public Light(String name){ super(name); }
}